--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
+    <link rel="stylesheet" href="assets/css/style.css"/>
     <title>Jeremy Hall - Web Developer</title>
   </head>
 
@@ -74,7 +76,6 @@
               <footer>
                 Made with ❤️ in SoFlo. © 2019 All Rights Reserved
               </footer>
-
           </div>    
         </main>      
       </div>  
