--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
                 </footer>    
         </main>      
       </div>  
-    </div>  
+    </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="assets/js/sidebar.js"></script>  
   </body>  
 </html>  
